moves health-in-colorado background to responsive overrides

--- a/development/terminalfour/src/sass/possible-partials/possible-viewport-overrides.scss
+++ b/development/terminalfour/src/sass/possible-partials/possible-viewport-overrides.scss
@@ -55,4 +55,18 @@
     font-size: 1.5rem;
   }
 }
+
+.health-in-colorado {
+  background: url(" ../media/possible/Health-in-colorado.jpg") no-repeat center center fixed;
+  display: table;
+  height: auto;
+  position: relative;
+  width: 100%;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+
 }
