--- a/development/terminalfour/src/sass/possible.scss
+++ b/development/terminalfour/src/sass/possible.scss
@@ -339,17 +339,17 @@ button, [type="button"],// 1
   }
 }
 
-.health-in-colorado {
-  background: url(" ../media/possible/Health-in-colorado.jpg") no-repeat center center fixed;
-  display: table;
-  height: auto;
-  position: relative;
-  width: 100%;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
+// .health-in-colorado {
+//   background: url(" ../media/possible/Health-in-colorado.jpg") no-repeat center center fixed;
+//   display: table;
+//   height: auto;
+//   position: relative;
+//   width: 100%;
+//   -webkit-background-size: cover;
+//   -moz-background-size: cover;
+//   -o-background-size: cover;
+//   background-size: cover;
+// }
 
 .background-right-copy {
   // background: url("../media/possible/Tivoli.jpg") no-repeat center center fixed;
