--- a/development/terminalfour/src/sass/possible.scss
+++ b/development/terminalfour/src/sass/possible.scss
@@ -70,7 +70,7 @@ font-weight: 700;
 }
 
 section {
-  padding-top: 20vh;
+  padding-top: 18vh;
   padding-bottom: 15vh;
   height: auto;
   // box-shadow: 1px 5px 5px rgba(0, 0, 0, 0.);
@@ -293,21 +293,21 @@ button, [type="button"],// 1
 }
 
 
-.teaching-tomorrows-teachers-section {
-  background: url("../media/possible/Teaching-tomorrow-teachers.jpg") no-repeat center center fixed;
-  display: table;
-  height: auto;
-  position: relative;
-  width: 100%;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+// .teaching-tomorrows-teachers-section {
+//   background: url("../media/possible/Teaching-tomorrow-teachers.jpg") no-repeat center center fixed;
+//   display: table;
+//   height: auto;
+//   position: relative;
+//   width: 100%;
+//   -webkit-background-size: cover;
+//   -moz-background-size: cover;
+//   -o-background-size: cover;
+//   background-size: cover;
 
-  .well {
-    background: #ffffffde;
-  }
-}
+//   .well {
+//     background: #ffffffde;
+//   }
+// }
 
 #master-your-future{
   padding-bottom: 20vh;
