--- a/development/terminalfour/src/html/includes/possible/reimagine-higher-education.html
+++ b/development/terminalfour/src/html/includes/possible/reimagine-higher-education.html
@@ -13,7 +13,7 @@
             href="https://red.msudenver.edu/2019/beer-here.html">Make beer</a> at a legendary brewery. Produce an
           <a href="https://red.msudenver.edu/2018/this-just-in-students-tv-job-a-dream-come-true.html">Emmy-winning newscast</a>. All without leaving campus. Plus, our downtown location provides unparalleled access to internships and
           networks that jump-start careers. Just ask this <a href="https://red.msudenver.edu/2019/so-you-want-to-host-sportscenter.html">“SportsCenter” anchor</a>.</p>
-        <p style="margin-bottom:20px; font-size:2rem;"> <strong>The possibilities are endless.</strong></p>
+        <h4>The possibilities are endless.</h4>
       </div>
       <div class="col-xs-12 col-md-6">
         <img class="img-thumbnail" src="style-assets/media/possible/pride.jpg">
