--- a/development/terminalfour/src/sass/possible-partials/possible-viewport-overrides.scss
+++ b/development/terminalfour/src/sass/possible-partials/possible-viewport-overrides.scss
@@ -1,12 +1,25 @@
 @media only screen and (max-width: 543px) {
-  .modal-dialog {
-      max-width: 100vw;
-  }
+  // .modal-dialog {
+  //     max-width: 100vw;
+  // }
 }
 
 @media only screen and (min-width: 544px) {
-  .modal-dialog {
-      max-width: 90vw;
+
+  h2 {
+    font-size: 1.25rem;
+
+  }
+
+  h3 {
+    font-size: 1.1rem;
+
+  }
+
+  h4{
+    font-size: 1.1rem;
+    font-weight: 700;
+    text-align: center;
   }
 
   .possible-word {
@@ -21,24 +34,51 @@
   .possible-indicator {
     top: 15vh;
   }
+
+  .health-in-colorado {
+    background: url(" ../media/possible/Health-in-colorado.jpg") no-repeat center center fixed;
+    height: auto;
+  }
+
+  .teaching-tomorrows-teachers-section {
+    background: url("../media/possible/Teaching-tomorrow-teachers.jpg") no-repeat center center fixed;
+    height: auto;
+  }
+
+  .possible-call-to-action {
+    background: url("../media/possible/open-house-student.jpg") no-repeat center center fixed;
+    height: auto;
+  }
+
 }
 @media only screen and (min-width: 992px) {
+
+  section {
+    padding-top: 18vh;
+    padding-bottom: 15vh;
+    height: auto;
+    // box-shadow: 1px 5px 5px rgba(0, 0, 0, 0.);
+  }
+
   .introduction {
     h1 {
       font-size: 5rem;
     }
   }
-  // .university-logo{
-  //   max-width: 400px;
-  //   margin-top: 20vh;
-  //   padding-right: 10vw
-  // }
+
   h2 {
-    font-size: 2.5rem;
+    font-size: 2.25rem;
+  }
+  h3 {
+    font-size: 1.5rem;
+  }
+  h4{
+    font-size: 1.5rem;
+    margin-top: 30px;
   }
 
   p {
-    font-size: 1.5rem;
+    font-size: 1.25rem;
   }
 
   .possible-indicator {
@@ -56,32 +96,18 @@
   }
 }
 
-.health-in-colorado {
-  background: url(" ../media/possible/Health-in-colorado.jpg") no-repeat center center fixed;
-  display: table;
-  height: auto;
-  position: relative;
-  width: 100%;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
+.copy-swap {
+ margin-top: 35px;
+ margin-right: -75px;
+ z-index: 1;
+ background-color: white;
+ position: absolute;
+ box-shadow: 5px 10px 10px rgba(0, 0, 0, 0.175);
+ padding:10%;
+ p, a, a:hover{
+   color:#00447c !important;
+ }
+ }
 
-.teaching-tomorrows-teachers-section {
-  background: url("../media/possible/Teaching-tomorrow-teachers.jpg") no-repeat center center fixed;
-  display: table;
-  height: auto;
-  position: relative;
-  width: 100%;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-
-  .well {
-    background: #ffffffde;
-  }
-}
 
 }
