--- a/development/terminalfour/src/html/includes/possible/learners-connect-with-leaders.html
+++ b/development/terminalfour/src/html/includes/possible/learners-connect-with-leaders.html
@@ -11,10 +11,8 @@
       <div class="col-xs-12 col-md-6">
 
         <p style="margin-top:5vh;">Learn to fight crime from the former <a href="http://red.msudenver.edu/2019/fighting-crime-from-the-classroom.html">director of the NCIS</a>. Analyze graphic novels with the convention <a
-            href="https://red.msudenver.edu/2018/comic-consummate-pro.html">director of Denver’s Comic
-            Con</a>. Get bitten by the insect bug with a <a href="https://red.msudenver.edu/2019/summer-bites.html">renowned mosquito biologist</a>. Our professors
-          are experts in their
-          fields, but even better at passing on their expertise to students.</p>
+            href="https://red.msudenver.edu/2018/comic-consummate-pro.html">director of Denver’s Pop Culture Con</a>. Get bitten by the insect bug with a <a href="https://red.msudenver.edu/2019/summer-bites.html">renowned mosquito biologist</a>. Our professors
+          are experts in their fields, but even better at passing on their expertise to students.</p>
       </div>
 
     </div>
