--- a/development/terminalfour/src/html/includes/possible/operating-satelites-from-the-classroom.html
+++ b/development/terminalfour/src/html/includes/possible/operating-satelites-from-the-classroom.html
@@ -4,9 +4,11 @@
       <div class="col-xs-12">
         <h2>We’re operating satellites from the classroom.</h2>
         <h3>Innovative partnerships with leading aerospace companies and hands-on opportunities to launch space-related careers.</h3>
-        <p>The Final Frontier? Metropolitan State University of Denver’s Aerospace Science program is already there.
+        <p>Our <a href="https://www.msudenver.edu/aviation/">aerospace science</a> students <a href="https://red.msudenver.edu/2019/charged-up.html">design batteries</a> for spacecraft, assist researchers protecting the planet from asteroid strikes 
+          and work on the <a href="https://red.msudenver.edu/2019/planetary-protectors.html">cutting edge of 3D printing.</a> Our partnerships with industry titans translate into excellent internship and job opportunities 
+          in <a href="http://red.msudenver.edu/2019/ready-for-blastoff.html">Colorado’s $15.4 billion aerospace industry.</a> Put your career on the launchpad at MSU Denver.
 
-            Our Aerospace Science students design batteries for small spacecraft, assist researchers protecting the planet from asteroid strikes and improve the efficiency with which major defense contractors build satellites.</p>
+        </p>
       </div>
     </div>
   </div>
