--- a/development/terminalfour/src/html/includes/possible/master-your-future.html
+++ b/development/terminalfour/src/html/includes/possible/master-your-future.html
@@ -7,7 +7,7 @@
         <div class="row">
           <div class="col-xs-12 col-md-6">
             <div class="copy-swap">
-              <p>Advance your community – and your career – with an <a href="https://www.msudenver.edu/graduate-studies/" advanced degree</a> in a critical Colorado field: <a
+              <p>Advance your community – and career – with an <a href="https://www.msudenver.edu/graduate-studies/"> advanced degree</a> in a critical Colorado field: <a
                   href="https://www.msudenver.edu/programs/master-of-business-administration-mba.shtml">business administration</a>, <a href="https://www.msudenver.edu/programs/master-of-professional-accountancy-mpacc.shtml">accounting</a>, <a
                   href="https://www.msudenver.edu/programs/master-of-arts-in-teaching-mat.shtml">teaching</a>, <a href="https://www.msudenver.edu/programs/master-of-science-in-cybersecurity.shtml">cybersecurity</a>, <a
                   href="https://www.msudenver.edu/programs/master-of-health-administration-mha.shtml">health administration</a>,
