--- a/www-root/includes/possible/brewing-innovation-in-hospitality.html
+++ b/www-root/includes/possible/brewing-innovation-in-hospitality.html
@@ -4,7 +4,7 @@
       <div class="col-xs-12">
         <h2>Brewing innovation at our School of Hospitality.</h2>
         <h3>Hands-on experience at Colorado’s only on-campus hotel, brewery and wine-cellar management lab.</h3>
-        <p>Leading the next generation of hospitality?</p>
+        <p>Whether it’s <a href="https://red.msudenver.edu/2017/homeless-to-homebrewing-peters-never-quits.html">founding a brewery</a> or being tapped for a <a href="https://red.msudenver.edu/2017/on-a-highway-to-ale.html">career with Coors</a>, students can <a href="https://www.msudenver.edu/beer/">craft their own futures</a> at MSU Denver. And Roadrunners don’t just excel in <a href="https://red.msudenver.edu/2019/beer-here.html">Colorado’s booming beer industry;</a> they work with industry leaders to <a href="https://red.msudenver.edu/2019/turning-up-the-heat.html">serve up delicious dishes</a>, ensure <a href="https://red.msudenver.edu/2019/ohana-in-action.html">five-star hotel stays</a> and even <a href="https://red.msudenver.edu/2017/props-for-an-out-of-this-world-event.html">launch events for the aerospace industry.</a></p>
       </div>
     </div>
   </div>
