--- a/www-root/includes/possible/multiply-your-roi.html
+++ b/www-root/includes/possible/multiply-your-roi.html
@@ -3,10 +3,10 @@
     <div class="row">
       <div class="col-xs-12">
         <h2>Best ROI in the business.</h2>
-        <h3>As the best-value business college in Colorado, we offer a startup spirit and the only sales center in the state – backed up by an international accreditation.
-        </h3>
-
-        <p>Buy your parents a house while putting yourself through college. Leave homelessness behind to open your own brewery. Buy a franchise with winnings from a national entrepreneur contest. Fulfill the American Dream.</p>
+        <h3>Our internationally accredited business college offers the best value in Colorado, a startup spirit and the only sales center in the state.</h3>
+        <p>Just one year after graduation, alumni of our <a href="https://www.msudenver.edu/business/">College of Business</a> earn close to 40% more than they paid for four years of tuition. 
+          That’s the best ROI of any <a href="https://www.msudenver.edu/business/about/">AACSB-accredited</a> university in Colorado. 
+          Add that to our first-rate faculty and you’ll be ready to <a href="https://red.msudenver.edu/2019/opportunities-in-store.html">open your dream franchise</a>, <a href="https://red.msudenver.edu/2019/watch-brewing-success.html">brewery</a> or hotel in no time.</p>
       </div>
     </div>
   </div>
