--- a/www-root/includes/possible/saving-endangered-languages.html
+++ b/www-root/includes/possible/saving-endangered-languages.html
@@ -2,7 +2,11 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <h2>saving-endangered-languages</h2>
+        <h2>Our students are saving endangered languages.</h2>
+        <h3>Our anthropology and linguistics students are on the ground in Central America working to preserve a disappearing Mayan language.</h3>
+        <p>Ch’orti’ is in danger of extinction. But MSU Denver <a href="https://www.msudenver.edu/soc/">anthropology</a> and <a href="https://www.msudenver.edu/programs/linguistics-major-ba.shtml">linguistics</a> 
+          students are working with local institutions in Guatemala and Honduras to make sure the threatened language doesn’t vanish.
+            Their work is one of several interdisciplinary research projects conducted by the University’s innovative <a href="https://www.msudenver.edu/soc/anthropology/ethnographylab/">Ethnography Lab.</a></p>
       </div>
     </div>
   </div>
