adds line-height for h2 on large displays

--- a/development/terminalfour/src/sass/possible-partials/possible-viewport-overrides.scss
+++ b/development/terminalfour/src/sass/possible-partials/possible-viewport-overrides.scss
@@ -28,13 +28,10 @@
       font-size: 5rem;
     }
   }
-  // .university-logo{
-  //   max-width: 400px;
-  //   margin-top: 20vh;
-  //   padding-right: 10vw
-  // }
+
   h2 {
     font-size: 2.5rem;
+    line-height: 3rem;
   }
 
   p {
