--- a/development/terminalfour/src/sass/msu-partials/_global-header.scss
+++ b/development/terminalfour/src/sass/msu-partials/_global-header.scss
@@ -811,9 +811,9 @@ div#searchModal.modal.fade.in {
       font-weight: 600;
       font-size: 18px;
   }
-  .nav >li * {
-  padding: 0px;
-  }
+  // .nav >li * {
+  // padding: 0px;
+  // }
 
   a.btn.btn-default.visit-give-mobile {
       right: 24.3%;
