cleans master's duplicate, fixes h2 line height and intro text

--- a/development/terminalfour/src/sass/possible-partials/possible-viewport-overrides.scss
+++ b/development/terminalfour/src/sass/possible-partials/possible-viewport-overrides.scss
@@ -21,7 +21,10 @@
     font-weight: 700;
     text-align: center;
   }
-
+  .introduction {
+    height: 100vh;
+    padding-top: 35vh;
+}
   .possible-word {
     letter-spacing: 1.5px;
     margin-left: -5px;
