--- a/development/terminalfour/src/sass/possible.scss
+++ b/development/terminalfour/src/sass/possible.scss
@@ -30,7 +30,7 @@ h2 {
   font-size: 1.5rem;
   margin: 10px 0;
   font-weight: 700;
-  line-height: 1.9rem;
+  // line-height: 1.9rem;
 }
 
 h3 {
@@ -78,7 +78,7 @@ section {
 
 .introduction {
   height: 100vh;
-  padding-top: 35vh;
+  padding-top: 25vh;
 
   h1 {
     font-size: 3rem;
