--- a/www-root/style-assets/css/possible.css
+++ b/www-root/style-assets/css/possible.css
@@ -28,7 +28,6 @@ h2 {
   font-size: 1.5rem;
   margin: 10px 0;
   font-weight: 700;
-  line-height: 1.9rem;
 }
 
 h3 {
@@ -76,7 +75,7 @@ section {
 
 .introduction {
   height: 100vh;
-  padding-top: 35vh;
+  padding-top: 25vh;
 }
 .introduction h1 {
   font-size: 3rem;
@@ -389,6 +388,11 @@ button, [type="button"],
     font-size: 1.1rem;
     font-weight: 700;
     text-align: center;
+  }
+
+  .introduction {
+    height: 100vh;
+    padding-top: 35vh;
   }
 
   .possible-word {
