changes bgcolor from HEX to RGB to support IE browsers

--- a/development/terminalfour/src/sass/msu-partials/_global-header.scss
+++ b/development/terminalfour/src/sass/msu-partials/_global-header.scss
@@ -1,5 +1,5 @@
 /* MainHeaderNavigation Styles */
-$bgColor: #ebf1faed;
+$bgColor: rgba(235, 241, 250, 0.84);
 $white: white;
 $primaryBlue: #002855;
 $primaryRed: #d11242;
