--- a/www-root/style-assets/css/main-style.css
+++ b/www-root/style-assets/css/main-style.css
@@ -7401,7 +7401,7 @@ button.close {
 }
 
 .main-site-header {
-  background-color: #ebf1faed;
+  background-color: rgba(235, 241, 250, 0.84);
 }
 
 .msudenver_logo, .msudenver_logo_change {
@@ -7630,7 +7630,7 @@ a.btn.btn-default.visit-give-mobile, a.btn.btn-default.give-mobile, a.btn.btn-de
 div#bs-example-navbar-collapse-1.collapse.navbar-collapse,
 div#bs-example-navbar-collapse-1 {
   transition: max-height 500ms cubic-bezier(0.42, 0, 0.58, 1);
-  background-color: #ebf1faed;
+  background-color: rgba(235, 241, 250, 0.84);
 }
 
 @media (min-width: 991px) {
@@ -9252,7 +9252,7 @@ a.skip-content:active, a.skip-content:focus, a.skip-content:hover {
 }
 /* Homepage events */
 #homepage-events {
-  background-color: #ebf1faed;
+  background-color: rgba(235, 241, 250, 0.84);
 }
 #homepage-events a:hover, #homepage-events a:active, #homepage-events a:focus {
   text-decoration: none;
