embedded video onto possible page

--- a/development/terminalfour/src/sass/possible.scss
+++ b/development/terminalfour/src/sass/possible.scss
@@ -369,6 +369,21 @@ button, [type="button"],// 1
   }
 }
 
+.movie-section {
+  overflow: hidden;
+  padding-top: 56.25%;
+  position: relative;
+
+  iframe {
+    height: 100%;
+    left: 0;
+    position: absolute; 
+    top: 0;
+    width: 100%;
+  }
+}
+
+
 @import "possible-partials/boostrap-overrides.scss";
 @import "possible-partials/possible-navigation.scss";
 @import "possible-partials/possible-viewport-overrides.scss";
