--- a/development/terminalfour/src/html/includes/possible/possible-movie.html
+++ b/development/terminalfour/src/html/includes/possible/possible-movie.html
@@ -2,7 +2,7 @@
     <div class="movie-section">
         <iframe 
             src="https://player.vimeo.com/video/348256640" 
-            
+            frameborder='0'
             webkitallowfullscreen 
             mozallowfullscreen 
             allowfullscreen>
