--- a/www-root/style-assets/css/main-style.css
+++ b/www-root/style-assets/css/main-style.css
@@ -11317,7 +11317,11 @@ hr.style-one {
   font-size: 24px;
 }
 
-.panel-default > .panel-heading {
+.panel-default {
+  background-color: #EFEFEF;
+  border-color: #C3C3C3;
+}
+.panel-default .panel-heading {
   background: #717073;
   color: #fff;
   font-size: 18px;
@@ -11328,11 +11332,6 @@ hr.style-one {
   color: #fff;
   font-weight: 700;
   font-size: 24px;
-}
-
-.panel-body {
-  background-color: #EFEFEF;
-  border-color: #C3C3C3;
 }
 
 .panel-body a {
