--- a/development/terminalfour/src/sass/ContentTypes/_variables.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_variables.scss
@@ -25,26 +25,26 @@
 .contentlink {
   background: #1b557a
 }
-.rowdyblue {
-  background: #00447c;
-  color: #fff!important;
-  &:hover {
-    background: #003663;
-  }
-}
+// .rowdyblue {
+//   background: #00447c;
+//   color: #fff!important;
+//   &:hover {
+//     background: #003663;
+//   }
+// }
 
-.rowdyred {
-  background: #c50f3c;
-  color: #fff!important;
-  &:hover {
-    background: #ad0d35;
-  }
-}
+// .rowdyred {
+//   background: #c50f3c;
+//   color: #fff!important;
+//   &:hover {
+//     background: #ad0d35;
+//   }
+// }
 
-.rowdygray {
-  background: #717073;
-  color: #fff!important;
-  &:hover {
-    background: #646366;
-  }
-}
+// .rowdygray {
+//   background: #717073;
+//   color: #fff!important;
+//   &:hover {
+//     background: #646366;
+//   }
+// }
