final publish for v4 www.msudenver.edu and final possible 19-09-10

--- a/development/terminalfour/src/html/includes/possible/call-to-action.html
+++ b/development/terminalfour/src/html/includes/possible/call-to-action.html
@@ -12,8 +12,9 @@
           arrive here and who are discovering their own
           possible every day.</p>
         <p style="margin-bottom:20px"> <strong>Ready to find your possible?</strong></p>
-        <a href="https://connect.msudenver.edu/register/requestinformation" target="_blank"><button class="col-xs-12 col-md-5 offset-md-1 btn">Request information</button></a>
-        <a href="/apply" target="_blank"><button class="col-xs-12 col-md-5 btn">Apply to MSU Denver</button></a>
+        <a href="https://connect.msudenver.edu/register/requestinformation?utm_source=possible-landing-page&utm_medium=direct-rp&utm_campaign=reimagine-possible&utm_term=request-info" target="_blank"><button
+            class="col-xs-12 col-md-5 offset-md-1 btn">Request information</button></a>
+        <a href="https://msudenver.edu/apply/?utm_source=possible-landing-page&utm_medium=direct-rp&utm_campaign=reimagine-possible&utm_term=request-info" target="_blank"><button class="col-xs-12 col-md-5 btn">Apply to MSU Denver</button></a>
       </div>
     </div>
   </div>
