--- a/development/terminalfour/src/sass/admissionsHomepage/homepage-slider.scss
+++ b/development/terminalfour/src/sass/admissionsHomepage/homepage-slider.scss
@@ -1,6 +1,7 @@
 section.admissionsHomepageSlider {
 	background-color: #00447C;
 	color: #ffffff;
+	margin-top: -15px;
 	h1, h2, h3, p {
 		color: #ffffff;
 		font-family: $font-family-sans-serif;
