--- a/www-root/style-assets/css/possible.css
+++ b/www-root/style-assets/css/possible.css
@@ -285,9 +285,8 @@ button, [type="button"],
 }
 
 #possible-movie {
-  padding-top: 0vh;
-  padding-bottom: 0vh;
-  background-color: #00447C;
+  padding-top: 0;
+  padding-bottom: 0;
 }
 #possible-movie .movie-section {
   overflow: hidden;
@@ -427,15 +426,30 @@ button, [type="button"],
   }
 
   .health-in-colorado {
+    background: url(" ../media/possible/Health-in-colorado.jpg") no-repeat center center fixed;
     height: auto;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
   }
 
   .teaching-tomorrows-teachers-section {
+    background: url("../media/possible/Teaching-tomorrow-teachers.jpg") no-repeat center center fixed;
     height: auto;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
   }
 
   .possible-call-to-action {
+    background: url("../media/possible/open-house-student.jpg") no-repeat center center fixed;
     height: auto;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
   }
 }
 @media only screen and (min-width: 992px) {
