--- a/development/terminalfour/src/html/includes/possible/dropdown-navbar.html
+++ b/development/terminalfour/src/html/includes/possible/dropdown-navbar.html
@@ -1,8 +1,4 @@
-
 <div class="navbar-wrapper blue-background">
-
-<!-- <div class="navbar-wrapper blue-background" style="display: none;"> -->
-  <!-- <nav id="navbar-possible" class="navbar navbar-fixed-top navbar-expand-md" data-toggle="collapse" data-target="navbar-inner"> -->
   <nav id="navbar-possible" class="navbar navbar-expand-md" data-toggle="collapse" data-target="navbar-inner">
     <div class="row">
       <div class="col-xs-12 col-md-8">
@@ -27,20 +23,15 @@
 
       <div class="col-xs-12 col-md-4 d-none d-lg-block">
         <div class="row" style="padding-right:15px;">
-          <a class="col-xs-12 col-md-6 " href="https://connect.msudenver.edu/register/requestinformation" target="_blank"><button class="btn" style="font-size: 1rem; padding: 10px; border: solid 3px #fff; width:100% ">Information</button></a>
-          <a class="col-xs-12 col-md-6" href="/apply" target="_blank"><button class="btn" style="font-size: 1rem; padding: 10px; border: solid 3px #fff; width:100%">Apply</button></a>
+          <a class="col-xs-12 col-md-6 " href="https://connect.msudenver.edu/register/requestinformation?utm_source=possible-landing-page&utm_medium=direct-rp&utm_campaign=reimagine-possible&utm_term=request-info" target="_blank"><button class="btn"
+              style="font-size: 1rem; padding: 10px; border: solid 3px #fff; width:100% ">Request Information</button></a>
+          <a class="col-xs-12 col-md-6" href="https://msudenver.edu/apply/?utm_source=possible-landing-page&utm_medium=direct-rp&utm_campaign=reimagine-possible&utm_term=request-info" target="_blank"><button class="btn"
+              style="font-size: 1rem; padding: 10px; border: solid 3px #fff; width:100%">Apply</button></a>
         </div>
       </div>
-
     </div>
-
   </nav>
 </div>
-
-<style>
-
-</style>
-
 <script type="text/javascript">
   const droptext = document.getElementById('nav-showing')
 
