--- a/www-root/includes/vendor-includes/footer-vendor.html
+++ b/www-root/includes/vendor-includes/footer-vendor.html
@@ -1,18 +1,18 @@
 <footer>
-    <section class="footer-container">
-        <div class="container">
-            <div class="col-xs-4 col-md-2">
-                <img src="style-assets/media/msudenver_informal.svg"  class="footer-logo-img" alt="MSU logo" />
-            </div>
-            <div class="col-xs-8 col-md-5">
-                  <p><a href="https://msudenver.edu"><strong>Metropolitan State University of Denver</strong></a></p>
-                  <p><a href="https://msudenver.edu/maps/">Denver, Colorado</a></p>
-                  <p>303-556-5740</p>
-                  <p><a href="https://msudenver.edu/contact/" href="javascript:void(0)">Contact Us</a></p>
-            </div>
-            <div class="col-xs-12 col-md-5 privacy-statement">
-                <p><a href="https://msudenver.edu">&copy; MSU Denver All Rights Reserved</a>  |  <a href="https://msudenver.edu/privacy">Privacy Statement</a></p>
-            </div>
-        </div>
-    </section>
+  <section class="footer-container">
+    <div class="container">
+      <div class="col-xs-4 col-md-2">
+        <img src="https://www.msudenver.edu/media/newsiteassets/images/msudenver_informal.svg" class="footer-logo-img" alt="MSU logo" />
+      </div>
+      <div class="col-xs-8 col-md-5">
+        <p><a href="https://msudenver.edu"><strong>Metropolitan State University of Denver</strong></a></p>
+        <p><a href="https://msudenver.edu/maps/">Denver, Colorado</a></p>
+        <p>303-556-5740</p>
+        <p><a href="https://msudenver.edu/contact/" href="javascript:void(0)">Contact Us</a></p>
+      </div>
+      <div class="col-xs-12 col-md-5 privacy-statement">
+        <p><a href="https://msudenver.edu">&copy; MSU Denver All Rights Reserved</a> | <a href="https://msudenver.edu/privacy">Privacy Statement</a></p>
+      </div>
+    </div>
+  </section>
 </footer>
