--- a/development/terminalfour/src/sass/possible.scss
+++ b/development/terminalfour/src/sass/possible.scss
@@ -349,7 +349,7 @@ button, [type="button"],// 1
   }
 }
 
-.master-your-future{
+#master-your-future{
   padding-bottom: 20vh;
   background-color: #D11242;
   h2,h3{
@@ -367,7 +367,7 @@ button, [type="button"],// 1
 
 }
 
-.possible-movie {
+#possible-movie {
   padding-top: 0;
   padding-bottom: 0;
   // background-color: $MSUDenver-Red;
