--- a/development/terminalfour/src/sass/possible-partials/possible-navbar.scss
+++ b/development/terminalfour/src/sass/possible-partials/possible-navbar.scss
@@ -1,3 +1,4 @@
+
 .navbar {
 
   display: block;
@@ -33,4 +34,11 @@
   p {
     color: #fff;
   }
+}
+
+#nav-showing {
+
+    border-style: solid;
+    border-width: 3px;
+
 }
