--- a/development/terminalfour/src/html/includes/possible/dropdown-navbar.html
+++ b/development/terminalfour/src/html/includes/possible/dropdown-navbar.html
@@ -6,7 +6,7 @@
         <div id="navbar-inner" class="">
           <ul class="nav nav-pills">
             <li class="nav-item dropdown">
-              <a id='nav-showing' class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Choose</a>
+              <a id='nav-showing' class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"><span>Choose</span></a>
               <div class="dropdown-menu">
                 <a class="dropdown-item" href="#introduction" hidden>Top</a>
                 <a class="dropdown-item" href="#possible-movie" hidden>Video</a>
@@ -44,7 +44,6 @@
 
   $(window).on("activate.bs.scrollspy", function() {
     const x = document.querySelectorAll('a.dropdown-item.active')[0].innerText
-    console.log(x)
     if (x == "Video" || x == "Top")
       $('.navbar-wrapper').removeClass('navbar-fixed-top')
     else {
